[gd_scene load_steps=14 format=3 uid="uid://bo0ods8oellra"]

[ext_resource type="Script" path="res://level/level.gd" id="1_ba6i6"]
[ext_resource type="TileSet" uid="uid://bselxwjwt4wr1" path="res://level/levels/floor_tile_concrete.tres" id="2_w8o0a"]
[ext_resource type="Texture2D" uid="uid://8dhreu1fktmf" path="res://assets/sprites/spritesheets/walls.png" id="3_3dxc5"]
[ext_resource type="PackedScene" uid="uid://dxaglnqg38ldr" path="res://level/levels/wall.tscn" id="3_mibpm"]
[ext_resource type="Script" path="res://level/decor_handler.gd" id="4_gbwiu"]
[ext_resource type="Script" path="res://components/scripts/component_hurt_box.gd" id="5_df040"]
[ext_resource type="Script" path="res://level/entity_handler.gd" id="5_h5lrv"]
[ext_resource type="PackedScene" uid="uid://bercrw1krwnbq" path="res://entities/npcs/spitter.tscn" id="6_nd4hd"]
[ext_resource type="PackedScene" uid="uid://1s51o3n7fjnk" path="res://entities/player.tscn" id="7_1f7bu"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_kx1wy"]
texture = ExtResource("3_3dxc5")
texture_region_size = Vector2i(4, 4)
6:14/0 = 0
6:14/0/physics_layer_0/linear_velocity = Vector2(0, 0)
6:14/0/physics_layer_0/angular_velocity = 0.0
6:14/0/physics_layer_0/polygon_0/points = PackedVector2Array(-2, -2, 2, -2, 2, 2, -2, 2)

[sub_resource type="TileSet" id="TileSet_ywygq"]
tile_size = Vector2i(4, 4)
physics_layer_0/collision_layer = 2
physics_layer_0/collision_mask = 0
sources/0 = SubResource("TileSetAtlasSource_kx1wy")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2bl3s"]
size = Vector2(320, 4)

[sub_resource type="Environment" id="Environment_hjfb6"]
glow_enabled = true

[node name="Level" type="Node2D"]
script = ExtResource("1_ba6i6")

[node name="Floor" type="TileMap" parent="."]
tile_set = ExtResource("2_w8o0a")
format = 2
layer_0/tile_data = PackedInt32Array(-1, 0, 1, -2, 0, 1, -3, 0, 0, -65539, 0, 0, -65538, 0, 1, -65537, 0, 0, -131072, 0, 1, -65536, 0, 0, -65535, 0, 0, 1, 0, 0, 0, 0, 1, 65535, 0, 1, 65534, 0, 0, 65533, 0, 1, 131070, 0, 1, 131071, 0, 0, 131069, 0, 0, 65536, 0, 1, 65537, 0, 0, 65538, 65536, 1, 2, 0, 1, -65534, 0, 1, -131070, 0, 1, -131071, 0, 0, 196605, 0, 1, 196606, 0, 1, 196607, 0, 1, 131072, 0, 0, 131073, 0, 0, 131074, 0, 1, 131075, 0, 1, 65539, 0, 0, 3, 0, 0, -65533, 0, 0, -131069, 0, 0, -196605, 0, 1, -196606, 65536, 1, -196607, 0, 0, -196608, 0, 0, -131073, 0, 0, -131074, 0, 1, -131075, 0, 1, -65540, 0, 1, -4, 0, 1, 65532, 0, 1, 131068, 0, 0, 196604, 0, 0, -131076, 0, 1, -196612, 0, 0, -196611, 0, 0, -196610, 0, 1, -196609, 0, 1, -262144, 0, 0, -262143, 0, 0, -262142, 65536, 1, -196604, 0, 1, -262140, 65536, 1, -262141, 0, 0, -131068, 0, 1, -65532, 0, 0, 4, 0, 0, 65540, 0, 0, 131076, 0, 1, 196612, 0, 0, 196611, 0, 0, 196610, 0, 1, 196609, 0, 0, 196608, 0, 0, 262143, 0, 0, 262142, 0, 1, 262141, 0, 0, 262140, 0, 1, 262139, 0, 1, 196603, 0, 0, 131067, 0, 1, 65531, 0, 1, -5, 0, 0, -65541, 0, 1, -131077, 65536, 1, -196613, 65536, 1, 262149, 65536, 1, 262148, 0, 0, 262147, 0, 1, 262146, 0, 1, 262145, 0, 1, 262144, 65536, 1, 327679, 0, 0, 327678, 0, 1, 327677, 65536, 1, 327676, 65536, 1, 327675, 0, 0, 327674, 0, 0, 262138, 65536, 1, 196602, 65536, 1, 131066, 0, 1, 65530, 0, 0, -6, 65536, 1, -65542, 65536, 1, -131078, 0, 0, -196614, 0, 1, -262149, 0, 1, -262148, 0, 0, -262147, 65536, 1, -262146, 65536, 1, -262145, 0, 1, -327680, 65536, 1, -327679, 65536, 1, -327678, 65536, 1, -327677, 0, 1, -262139, 65536, 1, -262138, 0, 0, -196602, 65536, 1, -131066, 0, 1, -131067, 0, 1, -65531, 65536, 1, 5, 0, 0, 65541, 65536, 1, 131077, 0, 0, 196613, 0, 1, 262150, 0, 1, 262151, 0, 0, 196615, 65536, 1, 196614, 65536, 1, 131078, 0, 0, 65542, 0, 0, 6, 0, 1, 7, 65536, 1, -65529, 65536, 1, -131065, 65536, 1, -196601, 0, 0, -262137, 0, 1, -65530, 0, 1, 65543, 0, 0, 131079, 0, 0, 65544, 0, 1, 8, 65536, 1, -65528, 0, 0, -131064, 0, 1, -131063, 0, 0, -196599, 65536, 1, -262135, 0, 0, -196600, 0, 1, -262136, 0, 0, -327672, 65536, 1, -65527, 0, 0, 9, 0, 0, 65545, 0, 0, 131081, 0, 1, 196617, 65536, 1, 262152, 0, 0, 327688, 0, 0, 327687, 0, 1, 262153, 0, 1, 327689, 0, 0, -327671, 0, 1, -393207, 0, 1, -458743, 0, 0, -524279, 65536, 1, -524280, 0, 0, -524281, 0, 1, -524282, 65536, 1, -524283, 65536, 1, -524284, 65536, 1, -524285, 0, 1, -524286, 0, 1, -524287, 0, 0, -524288, 65536, 1, -458753, 0, 0, -393217, 65536, 1, -393218, 0, 1, -393219, 0, 1, -393220, 0, 1, -393221, 0, 1, -393222, 0, 1, -393223, 0, 1, -393224, 0, 1, -458760, 65536, 1, -458761, 0, 1, -458762, 65536, 1, -458759, 65536, 1, -458758, 65536, 1, -458757, 0, 1, -458756, 0, 1, -458755, 0, 0, -458754, 0, 1, -327685, 65536, 1, -327686, 0, 1, -327687, 0, 0, -327688, 65536, 1, -327689, 0, 0, -327690, 65536, 1, -393225, 0, 1, -393226, 0, 1, -262154, 0, 1, -196618, 0, 0, -131082, 0, 0, -65546, 65536, 1, -10, 0, 0, 65526, 0, 0, 65527, 0, 0, 131063, 65536, 1, -9, 65536, 1, -8, 65536, 1, -65544, 0, 0, -131080, 0, 0, -196615, 0, 1, -262151, 0, 1, -262152, 0, 1, -196616, 65536, 1, -196617, 0, 1, -131081, 65536, 1, -262153, 0, 1, -65545, 0, 0, 131062, 0, 0, 196598, 0, 1, 262134, 0, 0, 327670, 0, 0, 393206, 0, 0, 393207, 0, 0, 393208, 65536, 1, 393209, 0, 0, 393210, 0, 0, 393211, 0, 1, 393212, 65536, 1, 393213, 65536, 1, 393214, 0, 0, 393215, 65536, 1, 327680, 0, 1, 327681, 0, 1, 327682, 0, 0, 327683, 0, 0, 327685, 65536, 1, 327686, 0, 1, 196616, 65536, 1, 131080, 0, 1, 327673, 0, 1, 327672, 0, 0, 327671, 65536, 1, 262135, 65536, 1, 196599, 0, 0, 196600, 0, 0, 131064, 65536, 1, 131065, 65536, 1, 65529, 0, 1, 262136, 0, 0, 196601, 0, 1, -7, 65536, 1, -65543, 0, 1, -131079, 0, 1, 262137, 0, 1, -262150, 65536, 1, -327683, 0, 0, -327682, 65536, 1, -327681, 65536, 1, -393216, 65536, 1, -393215, 0, 0, -393214, 65536, 1, -327684, 65536, 1, 65528, 0, 1, -393212, 0, 1, -393211, 0, 1, -393210, 0, 1, -327674, 0, 0, -327676, 0, 0, -458748, 0, 0, -458749, 0, 1, -458750, 0, 0, -458751, 65536, 1, -458752, 0, 1, -458747, 0, 1, -458746, 65536, 1, -458745, 0, 1, -393209, 65536, 1, -327673, 65536, 1, -393208, 0, 1, -458744, 0, 0, -327675, 65536, 1, -393213, 0, 1, 327684, 65536, 1, -196603, 0, 1)

[node name="Walls" type="TileMap" parent="."]
tile_set = SubResource("TileSet_ywygq")
format = 2
layer_0/tile_data = PackedInt32Array(-2162649, 393216, 14, -2162650, 393216, 14, -2162651, 393216, 14, -2162652, 393216, 14, -2162653, 393216, 14, -2162654, 393216, 14, -2162655, 393216, 14, -2162656, 393216, 14, -2162657, 393216, 14, -2162658, 393216, 14, -2162659, 393216, 14, -2162660, 393216, 14, -2162661, 393216, 14, -2162662, 393216, 14, -2162663, 393216, 14, -2162664, 393216, 14, -2162665, 393216, 14, -2162666, 393216, 14, -2162667, 393216, 14, -2162668, 393216, 14, -2162669, 393216, 14, -2162670, 393216, 14, -2162671, 393216, 14, -2162672, 393216, 14, -2162673, 393216, 14, -2162674, 393216, 14, -2162675, 393216, 14, -2162676, 393216, 14, -2162677, 393216, 14, -2162678, 393216, 14, -2162679, 393216, 14, -2162680, 393216, 14, -2162681, 393216, 14, -2162682, 393216, 14, -2162683, 393216, 14, -2162684, 393216, 14, -2162685, 393216, 14, -2162686, 393216, 14, -2162687, 393216, 14, -2162688, 393216, 14, -2097153, 393216, 14, -2097154, 393216, 14, -2097155, 393216, 14, -2097156, 393216, 14, -2097157, 393216, 14, -2097158, 393216, 14, -2097159, 393216, 14, -2097160, 393216, 14, -2097161, 393216, 14, -2097162, 393216, 14, -2097163, 393216, 14, -2097164, 393216, 14, -2097165, 393216, 14, -2097166, 393216, 14, -2097167, 393216, 14, -2097168, 393216, 14, -2097169, 393216, 14, -2097170, 393216, 14, -2097171, 393216, 14, -2097172, 393216, 14, -2097173, 393216, 14, -2097174, 393216, 14, -2097175, 393216, 14, -2097176, 393216, 14, -2097177, 393216, 14, -2097178, 393216, 14, -2097179, 393216, 14, -2097180, 393216, 14, -2097181, 393216, 14, -2097182, 393216, 14, -2097183, 393216, 14, -2097184, 393216, 14, -2097185, 393216, 14, -2097186, 393216, 14, -2097187, 393216, 14, -2097188, 393216, 14, -2097189, 393216, 14, -2097190, 393216, 14, -2097191, 393216, 14, -2097192, 393216, 14)

[node name="WallContainer" type="Node2D" parent="."]

[node name="Wall" parent="WallContainer" instance=ExtResource("3_mibpm")]
position = Vector2(200, -100)
rotation = 1.5708

[node name="HurtBox" type="Area2D" parent="WallContainer"]
collision_layer = 2
collision_mask = 0
script = ExtResource("5_df040")

[node name="CollisionShape2D" type="CollisionShape2D" parent="WallContainer/HurtBox"]
position = Vector2(0, -130)
shape = SubResource("RectangleShape2D_2bl3s")

[node name="DecorHandler" type="Node2D" parent="."]
script = ExtResource("4_gbwiu")

[node name="EntitiyHandler" type="Node2D" parent="."]
script = ExtResource("5_h5lrv")

[node name="Spitter" parent="EntitiyHandler" instance=ExtResource("6_nd4hd")]
position = Vector2(0, -100)

[node name="Player" parent="EntitiyHandler" instance=ExtResource("7_1f7bu")]

[node name="Global Shadow" type="DirectionalLight2D" parent="."]
blend_mode = 1
range_item_cull_mask = 31

[node name="DebugGlobalLight" type="DirectionalLight2D" parent="."]
visible = false
editor_only = true
range_item_cull_mask = 3

[node name="PlayerCamera" type="Camera2D" parent="."]
zoom = Vector2(3, 3)

[node name="UI" type="CanvasLayer" parent="PlayerCamera"]

[node name="Parallax" type="CanvasLayer" parent="PlayerCamera"]
layer = -1

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_hjfb6")
